--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
+  "proxy": "https://react-burger-701-default-rtdb.firebaseio.com",
   "eslintConfig": {
     "extends": [
       "react-app",
