--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "firebase": "^8.2.5",
     "gh-pages": "^3.1.0",
     "jquery": "^3.5.1",
     "node-sass": "4.14.1",
