--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^15.12.2",
+    "@types/react": "^17.0.10",
+    "@types/react-dom": "^17.0.7",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "firebase": "^8.2.5",
@@ -20,6 +24,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "typescript": "^4.3.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
