--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,9 @@
   "plugins": ["react-hooks"],
   "parser": "@babel/eslint-parser",
   "extends": ["airbnb", "eslint:recommended"],
+  "env": {
+    "browser": true
+  },
   "rules": {
     "react-hooks/rules-of-hooks": "error", // Sprawdza stosowanie zasad hooków
     "react-hooks/exhaustive-deps": "warn", // Sprawdza zależności efektów
