--- a/.eslintrc
+++ b/.eslintrc
@@ -24,6 +24,7 @@
         "ignoredNodes": ["JSXElement *"]
       }
     ],
+    "import/prefer-default-export": 0,
     "linebreak-style": 0,
     "no-mixed-spaces-and-tabs": "off",
     "comma-dangle": 0,
