--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,8 @@
   "parser": "@babel/eslint-parser",
   "extends": ["airbnb", "eslint:recommended"],
   "env": {
-    "browser": true
+    "browser": true,
+    "jest": true
   },
   "rules": {
     "react-hooks/rules-of-hooks": "error", // Sprawdza stosowanie zasad hooków
