chore: Update demo links

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://marcin-gromek-wttech.github.io/burger-builder/",
+  "homepage": "https://gromen.github.io/burger-builder/",
   "name": "burger-builder-app",
   "version": "0.1.0",
   "private": true,
