--- a/package.json
+++ b/package.json
@@ -10,15 +10,14 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.12.2",
-    "@types/react": "^17.0.10",
+    "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.7",
     "axios": "^0.21.4",
     "bootstrap": "^4.6.0",
-    "eslint": "^8.7.0",
+    "eslint": "^8.11.0",
     "firebase": "^8.2.5",
     "gh-pages": "^3.1.0",
     "jquery": "^3.5.1",
-    "node-sass": "7.0.0",
     "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
@@ -52,15 +51,16 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.16.7",
+    "@babel/core": "^7.17.7",
     "@babel/eslint-parser": "^7.16.5",
     "@babel/plugin-syntax-jsx": "^7.16.7",
     "@babel/preset-react": "^7.16.7",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "react-error-overlay": "^6.0.9"
+    "react-error-overlay": "^6.0.9",
+    "sass": "^1.49.9"
   }
 }
