config(Typescript): add typescript config

--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@types/react-dom": "^17.0.7",
     "axios": "^0.21.4",
     "bootstrap": "^4.6.0",
-    "eslint": "^8.11.0",
     "firebase": "^8.2.5",
     "gh-pages": "^3.1.0",
     "jquery": "^3.5.1",
@@ -25,7 +24,6 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "typescript": "^4.3.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -54,12 +52,18 @@
     "@babel/eslint-parser": "^7.16.5",
     "@babel/plugin-syntax-jsx": "^7.16.7",
     "@babel/preset-react": "^7.16.7",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "eslint": "^8.35.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-import": "^2.25.3",
+    "eslint-config-standard-with-typescript": "^34.0.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.3.0",
     "react-error-overlay": "^6.0.9",
-    "sass": "^1.49.9"
+    "sass": "^1.49.9",
+    "typescript": "^4.9.5"
   }
 }
