--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
     "env": {
         "browser": true,
-        "es2021": true
+        "es2021": true,
+        "jest": true
     },
     "extends": [
         "plugin:react/recommended",
@@ -18,6 +19,8 @@
         "react"
     ],
     "rules": {
-        "space-before-function-paren": "off"
+        "space-before-function-paren": "off",
+        "react/react-in-jsx-scope": "off",
+        "@typescript-eslint/space-before-function-paren": "off"
     }
 }
