eslint: allow semicolons

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,8 @@
     "rules": {
         "space-before-function-paren": "off",
         "react/react-in-jsx-scope": "off",
-        "@typescript-eslint/space-before-function-paren": "off"
+        "@typescript-eslint/space-before-function-paren": "off",
+        "semi": "off",
+        "@typescript-eslint/semi": "off"
     }
 }
