--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
         "react/react-in-jsx-scope": "off",
         "@typescript-eslint/space-before-function-paren": "off",
         "semi": "off",
-        "@typescript-eslint/semi": "off"
+        "@typescript-eslint/semi": "off",
+        "@typescript-eslint/member-delimiter-style": "off"
     }
 }
