--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "@babel/preset-react": "^7.16.7",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "eslint": "^8.35.0",
-    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-standard-with-typescript": "^34.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.5.1",
@@ -62,6 +62,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "prettier": "^2.8.4",
     "react-error-overlay": "^6.0.9",
     "sass": "^1.49.9",
     "typescript": "^4.9.5"
