refactor(eslint): reformat files to meet eslint requirements

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,8 @@
         "@typescript-eslint/space-before-function-paren": "off",
         "semi": "off",
         "@typescript-eslint/semi": "off",
-        "@typescript-eslint/member-delimiter-style": "off"
+        "@typescript-eslint/member-delimiter-style": "off",
+        "multiline-ternary": "off",
+        "react/display-name": [0, { "ignoreTranspilerName": true }]
     }
 }
