--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,9 +29,9 @@
         "react/display-name": [0, { "ignoreTranspilerName": true }],
         "no-restricted-imports": "off",
         "@typescript-eslint/no-restricted-imports": [
-            "warn",
+            1,
             {
-                "name": "react-redux-toolkit",
+                "name": "react-redux",
                 "importNames": ["useSelector", "useDispatch"],
                 "message": "Use typed hooks `useAppDispatch` and `useAppSelector` instead."
             }
