--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/firebase": "^3.2.1",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.12.2",
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.7",
     "axios": "^0.21.4",
     "bootstrap": "^4.6.0",
-    "firebase": "^8.2.5",
+    "firebase": "^9.17.2",
     "gh-pages": "^3.1.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
