--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,40 +1,34 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true,
-        "jest": true
-    },
-    "extends": [
-        "plugin:react/recommended",
-        "standard-with-typescript"
-    ],
-    "overrides": [
-    ],
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module",
-        "project": ["./tsconfig.json"]
-    },
-    "plugins": [
-        "react"
-    ],
-    "rules": {
-        "space-before-function-paren": "off",
-        "react/react-in-jsx-scope": "off",
-        "@typescript-eslint/space-before-function-paren": "off",
-        "semi": "off",
-        "@typescript-eslint/semi": "off",
-        "@typescript-eslint/member-delimiter-style": "off",
-        "multiline-ternary": "off",
-        "react/display-name": [0, { "ignoreTranspilerName": true }],
-        "no-restricted-imports": "off",
-        "@typescript-eslint/no-restricted-imports": [
-            1,
-            {
-                "name": "react-redux",
-                "importNames": ["useSelector", "useDispatch"],
-                "message": "Use typed hooks `useAppDispatch` and `useAppSelector` instead."
-            }
-        ]
-    }
+  "env": {
+    "browser": true,
+    "es2021": true,
+    "jest": true
+  },
+  "extends": ["plugin:react/recommended", "standard-with-typescript"],
+  "overrides": [],
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module",
+    "project": ["./tsconfig.json"]
+  },
+  "plugins": ["react"],
+  "rules": {
+    "space-before-function-paren": "off",
+    "react/react-in-jsx-scope": "off",
+    "@typescript-eslint/space-before-function-paren": "off",
+    "semi": "off",
+    "@typescript-eslint/semi": "off",
+    "@typescript-eslint/member-delimiter-style": "off",
+    "multiline-ternary": "off",
+    "react/display-name": [0, { "ignoreTranspilerName": true }],
+    "no-restricted-imports": "off",
+    "@typescript-eslint/no-restricted-imports": [
+      1,
+      {
+        "name": "react-redux",
+        "importNames": ["useSelector", "useDispatch"],
+        "message": "Use typed hooks `useAppDispatch` and `useAppSelector` instead."
+      }
+    ]
+  }
 }
