--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,14 +4,15 @@
     "es2021": true,
     "jest": true
   },
-  "extends": ["plugin:react/recommended", "standard-with-typescript"],
+  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
+  "parser": "@typescript-eslint/parser",
   "overrides": [],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module",
     "project": ["./tsconfig.json"]
   },
-  "plugins": ["react"],
+  "plugins": ["react", "@typescript-eslint"],
   "rules": {
     "space-before-function-paren": "off",
     "react/react-in-jsx-scope": "off",
