--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,7 @@
   },
   "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
   "parser": "@typescript-eslint/parser",
-  "overrides": [],
+  "overrides": [{ "files": ["*.js", "*.jsx"] }],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module",
