--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "@reduxjs/toolkit": "^1.8.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -11,13 +12,12 @@
     "@types/node": "^15.12.2",
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.7",
+    "@types/react-redux": "^7.1.30",
     "axios": "^0.21.4",
     "bootstrap": "^4.6.0",
     "firebase": "^9.17.2",
     "gh-pages": "^3.1.0",
     "jquery": "^3.5.1",
-    "popper.js": "^1.16.1",
-    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
@@ -35,7 +35,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
+    "predeploy": "pnpm run build",
     "deploy": "gh-pages -d build"
   },
   "proxy": "https://react-burger-701-default-rtdb.firebaseio.com",
@@ -54,7 +54,6 @@
   "devDependencies": {
     "@babel/core": "^7.23.3",
     "@babel/eslint-parser": "^7.23.3",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-syntax-jsx": "^7.23.3",
     "@babel/plugin-transform-nullish-coalescing-operator": "^7.23.3",
     "@babel/preset-react": "^7.23.3",
