--- a/package.json
+++ b/package.json
@@ -2,6 +2,13 @@
   "name": "burger-builder-app",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "start": "vite",
+    "build": "tsc && vite build",
+    "serve": "vite preview",
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage --watch=false"
+  },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "@reduxjs/toolkit": "^1.8.0",
@@ -13,6 +20,7 @@
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.7",
     "@types/react-redux": "^7.1.30",
+    "@vitejs/plugin-react-swc": "^3.4.1",
     "axios": "^0.21.4",
     "bootstrap": "^4.6.0",
     "firebase": "^9.17.2",
@@ -23,20 +31,14 @@
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "vite": "^4.5.0",
+    "vite-plugin-svgr": "^4.1.0",
+    "vite-tsconfig-paths": "^4.2.1",
     "web-vitals": "^0.2.4"
   },
   "engines": {
     "node": ">=18.0.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "pnpm run build",
-    "deploy": "gh-pages -d build"
   },
   "proxy": "https://react-burger-701-default-rtdb.firebaseio.com",
   "browserslist": {
@@ -58,6 +60,7 @@
     "@babel/plugin-transform-nullish-coalescing-operator": "^7.23.3",
     "@babel/preset-react": "^7.23.3",
     "@typescript-eslint/eslint-plugin": "6.4.0",
+    "@vitest/coverage-v8": "^0.34.6",
     "eslint": "^8.35.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-standard-with-typescript": "^39.1.1",
@@ -67,9 +70,11 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jsdom": "^22.1.0",
     "prettier": "^2.8.8",
     "react-error-overlay": "^6.0.11",
-    "sass": "^1.49.9",
-    "typescript": "^4.9.5"
+    "sass": "^1.69.5",
+    "typescript": "^4.9.5",
+    "vitest": "^0.34.6"
   }
 }
