--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gh-pages": "^3.1.0",
     "jquery": "^3.5.1",
     "next": "^14.0.2",
+    "next-auth": "^4.24.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
