--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@prisma/client": "^5.6.0",
     "@reduxjs/toolkit": "^1.8.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/bcrypt": "^5.0.2",
     "@types/jest": "^26.0.23",
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.7",
     "@types/react-redux": "^7.1.30",
     "axios": "^0.21.4",
+    "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.2",
     "firebase": "^9.17.2",
     "gh-pages": "^3.1.0",
@@ -51,6 +54,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "jsdom": "^22.1.0",
     "prettier": "^2.8.8",
+    "prisma": "^5.6.0",
     "react-error-overlay": "^6.0.11",
     "sass": "^1.69.5",
     "typescript": "^5.2.2"
