--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "migrate": "npx prisma migrate dev --name init"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
@@ -25,6 +26,7 @@
     "firebase": "^9.17.2",
     "gh-pages": "^3.1.0",
     "jquery": "^3.5.1",
+    "jsonwebtoken": "^9.0.2",
     "next": "^14.0.2",
     "next-auth": "^4.24.5",
     "react": "^18.2.0",
@@ -41,6 +43,7 @@
     "@babel/plugin-transform-nullish-coalescing-operator": "^7.23.3",
     "@babel/preset-react": "^7.23.3",
     "@next/eslint-plugin-next": "^14.0.2",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^15.14.9",
     "@typescript-eslint/eslint-plugin": "6.4.0",
     "eslint": "^8.35.0",
